@@ -6,20 +6,17 @@ if (!$::Driver) { use FindBin; exec("./driver.pl", @ARGV, $0); die; }
 # redistribute it and/or modify it under the terms of either the GNU
 # General Public License or the Perl Artistic License.
 
-unlink("obj_dir/t_sys_file_basic_test.log");
+top_filename("t/t_sys_file_basic.v");
 
 compile (
-	 v_flags2 => ['+incdir+../include'],
+	 v_flags2 => ['+incdir+../include',
+		      '+define+AUTOFLUSH'],
+	 verilator_flags2 => ['--autoflush'],
 	 );
 
 execute (
 	 check_finished=>1,
      );
-
-file_grep ("obj_dir/t_sys_file_basic_test.log",
-qr/\[0\] hello v=12345667
-\[0\] Hello2
-/);
 
 ok(1);
 1;
