@@ -8,6 +8,8 @@ indicates the contributor was also the author of the fix; Thanks!
 **   Add --x-assign=fast option, and make it the default.
      This chooses performance over reset debugging.  See the manual.
 
+**   Add --autoflush, for flushing streams after $display.  [Steve Tong]
+
 ***  Add $feof, $fgetc, $fgets, $fflush, $fscanf, $sscanf. [Holger Waechtler]
 
 ***  Add $stime. [Holger Waechtler]
